# Farman

./: .env.example  Dockerfile  farman.db  main.py  pyproject.toml  test_gemini.py  test_groq.py  test_raw.py
config/: settings.py
core/: agent.py  approvals.py  intent.py  llm.py
db/: models.py
integrations/: jira.py
modules/: base.py  registry.py
modules/ansible/: handler.py  manifest.yaml
tests/: test_agent.py  test_intent.py
